# combustion

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  render.py
src/: CMakeLists.txt  bind.cpp  flame.cpp  flame.hpp
src/transforms/: CMakeLists.txt  transform.cpp  transform.hpp
src/variations/: all.hpp  arch.hpp  bent.hpp  blade.hpp  blob.hpp  blur.hpp  bubble.hpp  cosine.hpp  cross.hpp  curl.hpp  cylinder.hpp  diamond.hpp  disc.hpp  ex.hpp  exponential.hpp  eyefish.hpp  fan.hpp  fan2.hpp  fisheye.hpp  gaussian.hpp  halve.hpp  handkerhcief.hpp  heart.hpp  horseshoe.hpp  hyperbolic.hpp  julia.hpp  julia_n.hpp  julia_scope.hpp  linear.hpp  ngon.hpp  noise.hpp  pdj.hpp  perspective.hpp  pie.hpp  polar.hpp  popcorn.hpp  power.hpp  radial_blur.hpp  rays.hpp  rectangles.hpp  (+14 more)
